create method in prod
